--- a/a.html
+++ b/a.html
@@ -11,7 +11,6 @@
 <style>
   a{
     text-decoration: none;
-    text-indent: 5px;
   }
 </style>
     </head>
@@ -38,7 +37,7 @@
                         </p>
                         <nav class="navbar navbar-light bg-light">
                             <form class="form-inline">
-                              <input class="form-control mr-sm-2" type="text" id="search_profession" placeholder="profession" aria-label="Search">
+                              <input class="form-control mr-sm-2" type="text" id="search_profession" placeholder="Profession" aria-label="Search">
                             <br>
                               <button class="btn btn-outline-success my-2 my-sm-0" type="button" onclick=Search()>Search</button>
                             </form>
